# lectures

lecture_1/: event_planet.py  main.py  mine.py  my_extended.py  pyproject.toml
lecture_12/: comprehensions.py  embed_test.py  golosovoy_bot_qwen2_5.ipynb  golosovoy_qwen3.ipynb  key.env  llm_api.ipynb  pyproject.toml
lecture_12/jupyter_venv/: pyvenv.cfg
lecture_12/src/lecture_12/: __init__.py
lecture_2/: branch.py  fancy.py  main.py  operations.py  pyproject.toml  task.py  task_1.ipynb
lecture_3/: beg.py  main.py  task_2.ipynb  while_task.py
lecture_4/: cycle.py  get_and_print.py  harder.py  main.py  task.py  task_3.ipynb
lecture_5/: cache.ipynb  f_in_f.py  fib.ipynb  greet.ipynb  main.py  my_functions.py  our_import.py  pyproject.toml  task.py  task_2.py
lecture_6/: caching_fibonacci.py  main.py
lecture_7/: README.md  complex.py  shrek.ipynb  simple.py  task.py
lecture_8/: linear_regression.ipynb  pyproject.toml  titanic.ipynb
lecture_9/: beetles.ipynb  main.py
lecture_A/: main.py  pyproject.toml
lecture_A/src/: aa.py
lecture_A/src/models/: user.py
lecture_A/test_git_check/: LICENSE
lecture_A/tests/: test_detectors.py
