[project]
name = "lecture-12"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ppwwrr", email = "fedorovaksenei@mail.ru" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=2.6.1",
    "rich>=14.2.0",
]

[project.scripts]
lecture-12 = "lecture_12:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
